abstract class ISendSensorDataPresenter {
  void showSuccessMessage(String message);
  void showErrorMessage(String message);
}
